# etude

./: .gitignore  CMakeLists.txt  etc_stdlib.bash  etc_stdlib.bat
.github/workflows/: build.yml
app/: CMakeLists.txt  etc_cli.cpp
src/: CMakeLists.txt
src/ast/: error_at_location.hpp  expressions.hpp
src/ast/scope/: context.cpp  context.hpp  context_builder.cpp  context_builder.hpp  symbol.hpp
src/driver/: compil_driver.hpp  module.hpp
src/lex/: lexer.cpp  lexer.hpp  location.hpp  scanner.hpp  token.hpp
src/parse/: parse_decl.cpp  parse_error.hpp  parse_expr.cpp  parse_pat.cpp  parse_stmt.cpp  parse_type.cpp  parser.hpp  parser_aux.cpp
src/qbe/: measure.hpp  qbe_value.hpp
src/types/: type.cpp  type.hpp
src/types/constraints/: solver.cpp  unify.cpp
src/types/constraints/expand/: expand.cpp
src/types/constraints/generate/: algorithm_w.cpp
src/types/instantiate/: inst_driver.cpp
